# Simbar-Qt

./: .clang-format  .clangd  .cmake-format.json  .gitignore  CMakeLists.txt  README.md
extensions/: Global.js  config.h  mocha.h  theme.h  view.h
src/: engine.cpp  engine.h  main.cpp
src/bluetooth/: common.h  controller.cpp  controller.h  model.cpp  model.h
src/engine/: engine.cpp  engine.h
src/ui/: flexrectangle.cpp  flexrectangle.h
src/view/: appview.cpp  appview.h
ui/: Main.qml  RightRegion.qml
ui/components/: AnimatedText.qml  BaseText.qml  KFrame.qml  TextBaseWidget.qml  Widget.qml
